# novel_make_v1

./: .gitignore  422_ERROR_FIX.md  API_TEST_REPORT.md  DATABASE_GUIDE.md  DATABASE_TEST_REPORT.md  DEPLOYMENT_ERROR_ANALYSIS.md  DIAGNOSIS_REPORT.md  ENGINE_FIX_REPORT.md  FAILURE_ANALYSIS.md  FIX_CODE_FOR_USER.md  FIX_SUMMARY.md  FIX_SUMMARY_FOR_USER.md  FRONTEND_DEPLOY.md  FRONTEND_PROGRESS_UPDATE.md  FULL_CHAIN_TEST_REPORT.md  FUNCTIONALITY_CHECK.md  ISSUE_ANALYSIS.md  JSON_FIX_REPORT.md  LATEST_PUSH_ATTEMPT.md  MANUAL_PUSH_GUIDE.md  MIGRATION_PLAN.md  NETWORK_ANALYSIS.md  PUSH_GUIDE.md  RAILWAY_CHECKLIST.md  RAILWAY_DEPLOY.md  RAILWAY_ENV_FIX.md  RAILWAY_ENV_SETUP.md  RAILWAY_ENV_VARS.md  README.md  SECURITY_FIX_SUMMARY.md  STREAMLIT_DEPLOY.md  STREAMLIT_ENV_ANALYSIS.md  SYSTEM_ANALYSIS.md  SYSTEM_DIAGNOSIS.md  TEST_REPORT.md  UI_DESIGN_GUIDE.md  URGENT_FIX_SUMMARY.md  auto_push.sh  check_push_status.sh  design_comparison.md  (+13 more)
backend/: .env.example  .env.qianfan  Dockerfile  README.md  README_FULL.md  config.yaml  database_schema.sql  docker-compose.yml  main.py  main_fixed.py  main_railway_test.py  mock_api.py  pyproject.toml  quick_test.py  railway.json  requirements-minimal.txt  requirements.txt  setup_workspace.py  start.py  start_simple.py  test_all_functions.py  test_api_format.py  test_architecture_system.py  test_blueprint.py  test_database.py  test_drama_chain.py  test_e2e_mini.py  test_end_to_end.py  test_full_chain.py  test_full_migration.py  test_full_pipeline.py  test_improved_quality.py  test_local.py  test_output_novel.md  test_quality.py  test_simple.py  (+2 more)
(+44 files in other folders)
